2010-09-02  Tobias Burnus  <burnus@net-b.de>

PR fortran/45489
        * resolve.c (apply_default_init): Mark symbol as referenced,
        if it is initialized.
        (resolve_symbol): Change intialized check for BT_DERIVED such
        that also function results get initialized; remove now obsolete
        gfc_set_sym_referenced for BT_CLASS.

2010-09-02  Tobias Burnus  <burnus@net-b.de>

        PR fortran/45489
        * gfortran.dg/initialization_27.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@163767 138bc75d-0d04-0410-961f-82ee72b054a4